# kopy

./: .gitignore  CHANGELOG.md  CI_LOCAL_VERIFICATION.md  Cargo.toml  README.md  about_project.md  implementation_plan.md  task.md
.agent/rules/: coding-standards.md  context.md  persona.md
.agent/workflows/: bootstrap-phase.md  implement-new-feature.md  refactor-code-review.md
.github/workflows/: ci.yml  push-email.yml  release.yml
src/: lib.rs  main.rs
src/commands/: mod.rs  sync.rs
src/config/: mod.rs
src/diff/: compare.rs  engine.rs  mod.rs  plan.rs
src/executor/: copy.rs  mod.rs  pool.rs  trash.rs
src/hash/: mod.rs
src/scanner/: mod.rs  mode.rs  parallel.rs  walker.rs
src/types/: action.rs  entry.rs  error.rs  mod.rs  tree.rs
src/ui/: mod.rs  progress.rs
tests/: checksum_tests.rs  copy_tests.rs  diff_tests.rs  sync_integration_tests.rs  trash_tests.rs
